@@ -88,7 +88,7 @@ enum cmd_error_t cmdfunc_attach(struct cmd_args_t *args,
      * constantly check if this process has launched.
      */
     if(waitfor){
-        rl_printf(DONT_WAIT_FOR_REPROMPT,
+        rl_printf(MAIN_THREAD,
                 "Waiting for process '%s' to launch (Ctrl+C to stop)\n\n", 
                 target);
 
