@@ -1,12 +1,6 @@
 #ifndef _SERVERS_H_
 #define _SERVERS_H_
 
-#include <pthread/pthread.h>
-
-extern pthread_t exception_server_thread;
-extern pthread_t death_server_thread;
-extern pthread_t tmon_thread;
-
 void setup_servers(char **);
 
 #endif
